<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description"
        android:cropToPadding="true"
        android:src="@drawable/login_hero_image" />

    <TextView
        style="@style/viewParent"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textColor="@color/blackTextColor"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:autofillHints="@string/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password"
        style="@style/parent.TextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:onClick="forgetPassword"
        android:text="@string/forget_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_login_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/login_with"
        android:textAlignment="center"
        android:textColor="@color/blackTextColor"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1">


            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="-2dp"
                android:layout_marginRight="-2dp"
                android:layout_marginBottom="23dp"
                android:backgroundTint="@color/float_transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description"
                android:cropToPadding="true"
                android:src="@drawable/facebook_button" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/googleLogin"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description"
            android:cropToPadding="true"
            android:src="@drawable/google_button" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/do_not_have_account"
            android:textColor="@color/blackTextColor"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerNow"
            android:text="@string/register_now"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</LinearLayout>