<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingTop="40dp"
    android:paddingRight="30dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description"
        android:cropToPadding="true"
        android:src="@drawable/login_hero_image" />

    <TextView
        style="@style/viewParent"
        android:layout_marginBottom="25dp"
        android:text="@string/reset_password"
        android:textColor="@color/blackTextColor"
        android:textSize="@dimen/headerTextSize"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/editTextResetEmail"
            style="@style/modifiedEditText"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/description"
        android:onClick="resetPassword"
        android:src="@drawable/ic_login_button" />
</LinearLayout>